--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Keys
-GEMINI_API_KEY=AIzaSyABVyKdEdx0Wn1Tdk_elOvteyOQvFUfuWo
+GEMINI_API_KEY=apikey
 
 # Model Configuration
 DEFAULT_MODEL=gemini-2.0-flash
